2016-05-26  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add support for third TrueType interpreter version.

	Option `-H' now takes an argument.

	* src/ttdebug.c (default_version, alternative_version): Replaced
	with...
	(tt_interpreter_versions, num_tt_interpreter_versions,
	dflt_tt_interpreter_version): ... these new global variables.
	(main): Expand check for alternative TrueType interpreter versions.
	Add argument to option `-H'.
	(Usage): Updated.

	* src/ttdebug.1: Updated.

2016-05-21  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Add support for third TrueType interpreter version.

	* src/ftgrid.c (GridStatusRec): Replace `tt_interpreter_version'
	with `tt_interpreter_versions' array.
	Add `num_tt_interpreter_versions' and `tt_interpreter_version_idx'.
	(event_tt_interpreter_version_change): Updated.
	(main): Expand check for alternative TrueType interpreter versions.

2016-05-21  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Add support for third TrueType interpreter version.

	* src/ftdiff.c (ColumnStateRec):  Replace `tt_interpreter_version'
	with `tt_interpreter_versions' array.
	Add `num_tt_interpreter_versions' and `tt_interpreter_version_idx'.
	(render_state_init): Expand check for alternative TrueType
	interpreter versions.
	(render_state_draw): Updated.
	(process_event) <'H'>: Updated.

2016-05-21  Werner Lemberg  <wl@gnu.org>

	[ftview] Add support for third TrueType interpreter version.

	* src/ftview.c (status): Replace `tt_interpreter_version' with
	`tt_interpreter_versions' array.
	Add `num_tt_interpreter_versions' and `tt_interpreter_version_idx'.
	(event_tt_interpreter_version_change, write_header): Updated.
	(main): Expand check for alternative TrueType interpreter versions.

2016-05-21  Werner Lemberg  <wl@gnu.org>

	Make compilation work with clang++.

	Also fix some warning messages.

	* src/ftcommon.c (FTDemo_Display_Clear): Use proper cast.
	(string_load): Replace shifts with multiplication.

	* src/ftgamma.c: (bit1, bit2): Complete initializer.