@@ -36,8 +36,9 @@ This program is part of the FreeType demos package.
 .SH OPTIONS
 .
 .TP
-.BI "\-H " ver
-Using hinting engine version VER.
+.BI "\-I " ver
+Use TrueType interpreter version
+.IR ver .
 Available versions are depending on compilation options of FreeType;
 call
 .B ttdebug
